completely restructured file paths and directories to publish live as demo

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <main class="auto-order-container">
 
 
-         <!-- marketing content -->
+        <!-- marketing content -->
         <div class="marketing-banners-container">
 
             <!-- offer-banner -->
@@ -60,7 +60,22 @@
 
                     <!-- content -->
                     <div class="carousel-content">
-                        <p class="temp-font">marketing content</p>
+                        <div class="carousel-item row">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                            <button class="btn-link round2 cta default">Shop Now 1</button>
+                        </div>
+                        <div class="carousel-item col hidden-carousel-item">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                            <button class="btn-link round2 cta default">Shop Now 2</button>
+                        </div>
+                        <div class="carousel-item row hidden-carousel-item">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                            <button class="btn-link round2 cta default">Shop Now 3</button>
+                        </div>
+                        <div class="carousel-item col hidden-carousel-item">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                            <button class="btn-link round2 cta default">Shop Now 4</button>
+                        </div>
                     </div>
                 </div>
             </div> <!-- offer-banner -->
@@ -168,7 +183,6 @@
     ------------------------------------------>
     <script src="./js/product-data.js"></script>
     <script src="./js/user-data.js"></script>
-    <script src="./js/func.js"></script>
     <script src="./js/app.js"></script>
 
 </body>
