--- a/index.html
+++ b/index.html
@@ -111,6 +111,10 @@
         </div>
         <!-- END user dashboard -->
 
+        <div class="sub-banner-content">
+            <h3>FPO Banner - <span class="emph">free product</span> while supplies last!</h3>
+        </div>
+
         <!-- current order overview -->
         <div class="auto-order-overview">
             <div class="header">
