--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
             <h3>FPO Banner - <span class="emph">free product</span> while supplies last!</h3>
         </div>
 
+        <div class="test">
         <!-- current order overview -->
         <div class="auto-order-overview">
             <div class="header">
@@ -167,6 +168,7 @@
             </form>
         </div>
         <!-- END order settings -->
+    </div>
 
         <!-- price footer -->
         <div class="price-footer">
