updated UI to show out of stock alert, and spacing for desktop_v1

--- a/index.html
+++ b/index.html
@@ -115,60 +115,65 @@
             <h3>FPO Banner - <span class="emph">free product</span> while supplies last!</h3>
         </div>
 
-        <div class="test">
-        <!-- current order overview -->
-        <div class="auto-order-overview">
-            <div class="header">
-                <h4>Products</h4>
-                <button class="btn-link round2 default">Edit</button>
-            </div>
-
-            <div class="current-products-container">
-                <!-- ... -->
-            </div>
+        <div class="out-of-stock-alert">
+            <i class="fas fa-exclamation-circle outofstock-icon"></i>
+            <p>One or more of your products are currently out of stock. However, if you already have it on your Smart Shop recurring order you will not be impacted and your item(s) will ship as expected.</p>
         </div>
-        <!-- END current order overview -->
 
-        <!-- order settings -->
-        <div class="auto-order-settings">
-            <div class="header">
-                <h4>Auto Order Settings</h4>
-                <i class="fas active fa-angle-down select-arrow"></i>
-            </div>
-            <div class="ao-settings-card-container hide">
-                <div class="card shrink">
-                    <div class="group">
-                        <h4>Your Next Ship Date</h4>
-                        <p class="ship-date-copy">Monday, Jan 18</p>
-                        <p><span class="bold">Frequency</span> is set for <span class="bold">every month</span></p>
-                    </div>
+        <div class="section-split">
+            <!-- current order overview -->
+            <div class="auto-order-overview">
+                <div class="header">
+                    <h4>Products</h4>
                     <button class="btn-link round2 default">Edit</button>
                 </div>
-                <div class="card shrink">
-                    <div class="group half">
-                        <h4>Shipping Address</h4>
-                        <p class="shipping-address-copy">1234 Test Lane, Addison, TX 75001</p>
-                    </div>
-                    <button class="btn-link round2 default">Edit</button>
-                </div>
-                <div class="card shrink">
-                    <div class="group half">
-                        <h4>Payment Method</h4>
-                        <p class="payment-method-copy">
-                            Mastercard ending in 1111
-                        </p>
-                    </div>
-                    <button class="btn-link round2 default">Edit</button>
+
+                <div class="current-products-container">
+                    <!-- ... -->
                 </div>
             </div>
-            <button class="coupon-btn">Have a coupon or promo code?</button>
-            <form class="coupon-input-container">
-                <input type="text">
-                <button type="submit" class="default btn-link round2">Apply</button>
-            </form>
+            <!-- END current order overview -->
+
+            <!-- order settings -->
+            <div class="auto-order-settings">
+                <div class="header">
+                    <h4>Subscription Settings</h4>
+                    <i class="fas active fa-angle-down select-arrow"></i>
+                </div>
+                <div class="ao-settings-card-container hide">
+                    <div class="card shrink">
+                        <div class="group">
+                            <h4>Your Next Ship Date</h4>
+                            <p class="ship-date-copy">Monday, Jan 18</p>
+                            <p><span class="bold">Frequency</span> is set for <span class="bold">every month</span></p>
+                        </div>
+                        <button class="btn-link round2 default">Edit</button>
+                    </div>
+                    <div class="card shrink">
+                        <div class="group half">
+                            <h4>Shipping Address</h4>
+                            <p class="shipping-address-copy">1234 Test Lane, Addison, TX 75001</p>
+                        </div>
+                        <button class="btn-link round2 default">Edit</button>
+                    </div>
+                    <div class="card shrink">
+                        <div class="group half">
+                            <h4>Payment Method</h4>
+                            <p class="payment-method-copy">
+                                Mastercard ending in 1111
+                            </p>
+                        </div>
+                        <button class="btn-link round2 default">Edit</button>
+                    </div>
+                </div>
+                <button class="coupon-btn">Have a coupon or promo code?</button>
+                <form class="coupon-input-container">
+                    <input type="text">
+                    <button type="submit" class="default btn-link round2">Apply</button>
+                </form>
+            </div>
+            <!-- END order settings -->
         </div>
-        <!-- END order settings -->
-    </div>
 
         <!-- price footer -->
         <div class="price-footer">
