updated UI with tweaks for demo

--- a/index.html
+++ b/index.html
@@ -112,7 +112,8 @@
         <!-- END user dashboard -->
 
         <div class="sub-banner-content">
-            <h3>FPO Banner - <span class="emph">free product</span> while supplies last!</h3>
+            <i class="fas fa-certificate"></i>
+            <h3>FPO Banner - <span class="emph">spend $17 more to receive your free product</span> while supplies last!</h3>
         </div>
 
         <div class="out-of-stock-alert">
